// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should render an select input 1`] = `
<DocumentFragment>
  <select
    class="appearance-none block w-full form-select transition-colors duration-200"
    data-testid="select-input"
    placeholder="Select option"
  />
</DocumentFragment>
`;

exports[`Select should render an select input with options 1`] = `
<DocumentFragment>
  <select
    class="appearance-none block w-full form-select transition-colors duration-200"
    data-testid="select-input"
    placeholder="Select option"
  >
    <option
      data-testid="select-option"
      value="1"
    >
      Option 1
    </option>
    <option
      data-testid="select-option"
      value="2"
    >
      Option 2
    </option>
  </select>
</DocumentFragment>
`;
